--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ a{
     height: 480px;
     position: relative;
     margin: 2% auto;
-    background: rgba(0,0,0,0.3);
+    background: rgba(226, 159, 96, 0.3);
     padding: 10px;
     overflow: hidden;
 }
@@ -90,7 +90,7 @@ a{
     position: absolute;
     width: 110px;
     height: 100px;
-    background: #471b27;
+    background: #fcb65a;
     border-radius: 30px;
     transition: .5s;
 }
@@ -123,7 +123,7 @@ a{
     cursor: pointer;
     display: block;
     margin: auto;
-    background: #471b27;
+    background: #dd57b0;
     border: 0;
     outline: none;
     border-radius: 30px;
