--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ nav ul li a:hover{
 }
 a{
     text-decoration: none;
-    color: rgb(253, 252, 252);
+    color: rgb(255, 255, 255);
     font-size: 28px;
 }
 #login-form{
@@ -66,7 +66,7 @@ a{
     height: 480px;
     position: relative;
     margin: 2% auto;
-    background: rgba(226, 159, 96, 0.3);
+    background: rgba(77, 71, 67, 0.5);
     padding: 10px;
     overflow: hidden;
 }
@@ -90,7 +90,7 @@ a{
     position: absolute;
     width: 110px;
     height: 100px;
-    background: #fcb65a;
+    background: #964c07;
     border-radius: 30px;
     transition: .5s;
 }
@@ -123,7 +123,7 @@ a{
     cursor: pointer;
     display: block;
     margin: auto;
-    background: #dd57b0;
+    background: #964c07;
     border: 0;
     outline: none;
     border-radius: 30px;
@@ -132,7 +132,7 @@ a{
     margin: 30px 10px 34px 0;
 }
 span{
-    color: #777;
+    color: rgb(17, 16, 16);
     font-size: 12px;
     bottom: 68px;
     position: absolute;
@@ -141,7 +141,7 @@ span{
     left: 50px;
 }
 #login input{
-    color: white;
+    color: rgb(8, 8, 8);
     font-size: 15;
 }
 #register{
